# Data_Plattform_DE25_LisaYllander

./: README.md  main.py  pyproject.toml
CSV_Data_API/: api.py  data_processing.py  eda.ipynb
Pandas/pandas/: main.py  products.csv
Schema/: readme.md  user.py
fastapi_pydantic/: readme.md
fastapi_pydantic/Schema/: fox.py
postgresql_fastapi/: main.py  readme.md
postgresql_fastapi/Schema/: main.py  product.py
