[project]
name = "data-plattform-de25-lisayllander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.0",
    "psycopg[binary,pool]>=3.3.2",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
